crates/ai/tests/snapshots/tool_schemas__snapshot_get_holdings.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_holdings",
  "parameters": {
    "properties": {
      "accountId": {
        "default": "TOTAL",
        "type": "string"
      },
      "viewMode": {
        "default": "treemap",
        "enum": [
          "table",
          "treemap",
          "both"
        ],
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
