crates/ai/tests/snapshots/tool_schemas__snapshot_get_income.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_income",
  "parameters": {
    "properties": {
      "period": {
        "description": "Time period for income summary: YTD (year to date), LAST_YEAR, or TOTAL (all time). Defaults to YTD.",
        "enum": [
          "YTD",
          "LAST_YEAR",
          "TOTAL"
        ],
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
