crates/ai/tests/snapshots/tool_schemas__snapshot_get_performance.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_performance",
  "parameters": {
    "properties": {
      "accountId": {
        "default": "TOTAL",
        "description": "Account ID to get performance for, or 'TOTAL' for all accounts",
        "type": "string"
      },
      "period": {
        "default": "YTD",
        "description": "Time period for performance calculation",
        "enum": [
          "1M",
          "3M",
          "6M",
          "YTD",
          "1Y",
          "ALL"
        ],
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
